apps/adguard-home/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  namespace: app-adguard-home
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: adguard.dev0.sedware.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: adguard-home, port: { name: http } }
